--- a/static/index.css
+++ b/static/index.css
@@ -15,7 +15,7 @@
 }
 #middle{
     position: absolute;
-    top:50%;
+    top:30%;
     bottom: 0;
     left: 0;
     right: 0;
@@ -23,9 +23,10 @@
     margin: auto;
 }
 
+
 #iteon{
-    width: 250px;
-    height: 250px;
+    width: 500px;
+    height: 500px;
 }
 #i{
     text-align: center;
@@ -33,4 +34,58 @@
 }
 button{
     color: green;
+}
+.nav-link{
+    color: black;
+    font-size: x-large;
+
+}
+.nav-link a:hover{
+    color: lightseagreen;
+}
+#rectangle1 {
+    width: 300px;
+    height: 2000px;
+   background: rgba(248,80,50,1);
+background: -moz-linear-gradient(45deg, rgba(248,80,50,1) 0%, rgba(241,111,92,1) 0%, rgba(246,41,12,1) 0%, rgba(19,204,193,1) 0%, rgba(37,214,136,1) 100%);
+background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(248,80,50,1)), color-stop(0%, rgba(241,111,92,1)), color-stop(0%, rgba(246,41,12,1)), color-stop(0%, rgba(19,204,193,1)), color-stop(100%, rgba(37,214,136,1)));
+background: -webkit-linear-gradient(45deg, rgba(248,80,50,1) 0%, rgba(241,111,92,1) 0%, rgba(246,41,12,1) 0%, rgba(19,204,193,1) 0%, rgba(37,214,136,1) 100%);
+background: -o-linear-gradient(45deg, rgba(248,80,50,1) 0%, rgba(241,111,92,1) 0%, rgba(246,41,12,1) 0%, rgba(19,204,193,1) 0%, rgba(37,214,136,1) 100%);
+background: -ms-linear-gradient(45deg, rgba(248,80,50,1) 0%, rgba(241,111,92,1) 0%, rgba(246,41,12,1) 0%, rgba(19,204,193,1) 0%, rgba(37,214,136,1) 100%);
+background: linear-gradient(45deg, rgba(248,80,50,1) 0%, rgba(241,111,92,1) 0%, rgba(246,41,12,1) 0%, rgba(19,204,193,1) 0%, rgba(37,214,136,1) 100%);
+
+    z-index: -1;
+    opacity: 0.5;
+	-ms-transform: rotate(55deg); /* IE 9 */
+    -webkit-transform: rotate(55deg); /* Safari 3-8 */
+    transform: rotate(55deg);
+	top: -100px;
+	right: 500px;
+	position: absolute;
+}
+#rectangle2 {
+    width: 250px;
+    height: 2000px;
+   background: rgba(246,41,12,1);
+background: -moz-linear-gradient(left, rgba(246,41,12,1) 0%, rgba(241,111,92,1) 0%, rgba(145,232,105,1) 0%, rgba(32,215,140,1) 100%);
+background: -webkit-gradient(left top, right top, color-stop(0%, rgba(246,41,12,1)), color-stop(0%, rgba(241,111,92,1)), color-stop(0%, rgba(145,232,105,1)), color-stop(100%, rgba(32,215,140,1)));
+background: -webkit-linear-gradient(left, rgba(246,41,12,1) 0%, rgba(241,111,92,1) 0%, rgba(145,232,105,1) 0%, rgba(32,215,140,1) 100%);
+background: -o-linear-gradient(left, rgba(246,41,12,1) 0%, rgba(241,111,92,1) 0%, rgba(145,232,105,1) 0%, rgba(32,215,140,1) 100%);
+background: -ms-linear-gradient(left, rgba(246,41,12,1) 0%, rgba(241,111,92,1) 0%, rgba(145,232,105,1) 0%, rgba(32,215,140,1) 100%);
+background: linear-gradient(to right, rgba(246,41,12,1) 0%, rgba(241,111,92,1) 0%, rgba(145,232,105,1) 0%, rgba(32,215,140,1) 100%);
+    z-index: -1;
+    opacity: 0.5;
+	-ms-transform: rotate(-45deg); /* IE 9 */
+    -webkit-transform: rotate(-45deg); /* Safari 3-8 */
+    transform: rotate(-45deg);
+	top: -200px;
+	left: 300px;
+	position: absolute;
+}
+html, body {
+    position:fixed;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
 }
