--- a/templates/index.html
+++ b/templates/index.html
@@ -34,35 +34,53 @@
   <div class="row ">
     <div class="col" id="imageUpload">
 
-        <img id="blah" src="#" alt="your image"  />
+        <img id="blah" src="#" alt="Upload Image For Analysis"  />
     </div>
   </div>
     <br>
     <div  class="row">
-      <div class="col" id="uploadedImage"><input class="in" type='file' onchange="readURL(this);" /></div>
+
+      <div class="col" id="uploadedImage">
+          <form id="file_Upload" method="POST" action="{{ url_for(".process_image") }}" enctype="multipart/form-data">
+              <input class="in" type='file' onchange="readURL(this);" />
+
+
+          </form>
+
+      </div>
+
+  </div>
+    <div  class="row">
+
+      <div class="col" id="uploadedImage">
+          <button form="file_Upload" class="abtn btn-outline btn-xl" type="submit" value="upload" onclick="aiConfirmation()">ANALYZE</button>
+
+      </div>
 
   </div>
 </div>
-<div id="popUpText">
+<div id="popUpText" class="hidden">
     <h1>Is the photo of a ?</h1>
     <div class="row">
         <div class="col">
-            <button type="button" onclick="rightGuess(true)">
+            <button class="abtn btn-outline btn-xl" type="button" onclick="rightGuess(true)">
                 Yes!
             </button>
         </div>
         <div class="col">
-            <button type="button" onclick="rightGuess(false)">
+            <button class="abtn btn-outline btn-xl" type="button" onclick="rightGuess(false)">
                 No...
             </button>
         </div>
 
     </div>
 </div>
-
+<h1 id="area"></h1>
 
 <div id="rectangle1"></div>
 <div id="rectangle2"></div>
+<div id="rectangle3"></div>
+<div id="rectangle4"></div>
 
 
 
@@ -90,6 +108,22 @@
         }else if (t == false){
 
         }
+
+    }
+
+    function aiConfirmation() {
+        var item = document.getElementById("popUpText");
+        if (item) {
+            if (item.className == 'hidden'){
+                item.className = 'unhidden';
+
+            }else{
+                item.className = 'hidden';
+            }
+        }
+
+
+
 
     }
 
