--- a/templates/index.html
+++ b/templates/index.html
@@ -112,7 +112,7 @@
         var item = document.getElementById("popUpText");
         if (item) {
             if (item.className == 'hidden'){
-                item.className = 'unhidden';
+                item.className = 'hidden';
 
             }else{
                 item.className = 'hidden';
